--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "super-translater",
   "displayName": "Super translater",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A basic Plasmo extension.",
   "author": "wangrongding",
   "scripts": {
@@ -13,21 +13,24 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@plasmohq/prettier-plugin-sort-imports": "3.5.4",
     "@types/chrome": "0.0.198",
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
     "plasmo": "0.56.0",
+    "postcss": "^8.4.18",
     "prettier": "2.7.1",
-    "typescript": "4.8.4",
-    "@plasmohq/prettier-plugin-sort-imports": "3.5.4"
+    "tailwindcss": "^3.2.1",
+    "typescript": "4.8.4"
   },
   "manifest": {
     "host_permissions": [
       "https://*/*"
     ],
     "permissions": [
-      "tabs"
+      "---tabs"
     ]
   }
 }
