chore: 修改包名和描述

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "super-translater",
-  "displayName": "Super translater",
+  "name": "super-extensions",
+  "displayName": "Super extensions",
   "version": "0.0.1",
-  "description": "A basic Plasmo extension.",
+  "description": " A super unbeatable browser extension plugin for developers.",
   "author": "wangrongding",
   "scripts": {
     "dev": "plasmo dev",
