--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "plasmo build"
   },
   "dependencies": {
+    "@plasmohq/storage": "^0.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -25,6 +26,7 @@
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   },
+  "homepage": "https://github.com/wangrongding",
   "manifest": {
     "host_permissions": [
       "https://*/*"
