--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dev-buff",
-  "displayName": "Dev Buff",
+  "name": "dev-man",
+  "displayName": "DevMan",
   "version": "0.0.1",
   "description": "A super unbeatable browser extension plugin for developers.",
   "author": "荣顶",
