chore: 修改一些信息

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dev-man",
-  "displayName": "DevMan",
+  "name": "dev-go",
+  "displayName": "DevGo",
   "version": "0.0.1",
   "description": "A super unbeatable browser extension plugin for developers.",
   "author": "荣顶",
