--- a/package.json
+++ b/package.json
@@ -7,8 +7,20 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
+    "build:zip": "plasmo build -- --zip",
     "package": "plasmo package",
-    "build:zip": "plasmo build -- --zip"
+    "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,scss,less,html,json,md}\"",
+    "eslint": "eslint \"./**/*{.js,.ts,.jsx,.tsx}\" --fix",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx,css,sass,scss,less,md,json,html}": [
+      "prettier --write"
+    ],
+    "*.{ts,js,tsx,jsx}": [
+      "eslint",
+      "echo '没问题！'"
+    ]
   },
   "dependencies": {
     "antd": "^5.0.3",
@@ -16,17 +28,30 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@plasmohq/prettier-plugin-sort-imports": "3.5.4",
     "@types/chrome": "0.0.198",
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
+    "commitizen": "^4.2.5",
+    "eslint": "^8.0.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.4",
     "plasmo": "0.59.1",
     "postcss": "^8.4.19",
     "prettier": "2.8.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.8.4"
+    "typescript": "*"
   },
   "homepage": "https://github.com/wangrongding",
   "manifest": {
