--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "plasmo": "0.59.1",
     "postcss": "^8.4.19",
     "prettier": "2.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.0",
     "tailwindcss": "^3.2.4",
     "typescript": "*"
   },
