--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint": "eslint \"./**/*{.js,.ts,.jsx,.tsx}\" --fix",
     "prepare": "husky install",
     "release": "standard-version",
-    "commit": "cz"
+    "cz": "cz"
   },
   "lint-staged": {
     "*.{js,ts,jsx,tsx,css,sass,scss,less,md,json,html}": [
@@ -23,6 +23,11 @@
       "eslint"
     ]
   },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
+  },
   "dependencies": {
     "antd": "^5.0.3",
     "react": "18.2.0",
@@ -31,6 +36,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@commitlint/cz-commitlint": "^17.3.0",
     "@plasmohq/prettier-plugin-sort-imports": "3.5.4",
     "@types/chrome": "0.0.198",
     "@types/node": "18.11.0",
@@ -40,6 +46,8 @@
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
     "commitizen": "^4.2.5",
+    "commitlint-config-cz": "^0.13.3",
+    "cz-customizable": "^7.0.0",
     "eslint": "^8.0.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
